@@ -1,0 +1,8 @@
+#ifndef NOKOGIRI_HTML_ENTITY_LOOKUP
+#define NOKOGIRI_HTML_ENTITY_LOOKUP
+
+#include <native.h>
+
+void init_html_entity_lookup();
+
+#endif
